bugs: found bug with loader(jumping when is working)

--- a/src/client/sass/_colors.scss
+++ b/src/client/sass/_colors.scss
@@ -9,4 +9,4 @@ $white:#FFF;
 $black:#1B1B1E;
 
 
-$gradient:linear-gradient(19deg, #21D4FD 0%, #B721FF 100%);
+$gradient:linear-gradient(-159deg, #21D4FD 0%, #B721FF 100%);
