--- a/src/client/sass/_spinner.scss
+++ b/src/client/sass/_spinner.scss
@@ -1,9 +1,9 @@
 .spinner {
     position: absolute;
-    width: 100%;
-    width: 100%;
+    width: 80%;
     background-color: $white;
     display: none;
+    margin: 0 auto;
 
     align-items: center;
     justify-content: center;
